Fixed API error 429 and coin refreshs